# dmb

./: .gitignore  Makefile  README.md  Taskfile.yaml  cereals.py  poetry.toml  pyproject.toml  todo.md
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml
auto-correlation/: pyproject.toml
auto-correlation/auto_correlation/: __init__.py  ac.py
data/test/: input_parameters.json
dmb/: logging.py  paths.py
dmb/configs/callbacks/: default.yaml  finetune.yaml  lr_monitor.yaml  model_checkpoint_best.yaml  model_checkpoint_regular.yaml  model_summary.yaml  plot_phase_diagram.yaml  stochastic_weight_averaging.yaml
dmb/configs/datamodule/: bose_hubbard_2d.yaml  bose_hubbard_2d_pyalps.yaml  bose_hubbard_2d_simulated.yaml
dmb/configs/experiment/: longer_training.yaml  setup_test.yaml
dmb/configs/experiment/bose_hubbard_2d/: resnet_density_msle.yaml  se_cnn_density_msle.yaml
dmb/configs/experiment/bose_hubbard_2d/cpp_worm/: cnn_all_obs_mse_exp_transforms_random_bigger.yaml  cnn_all_obs_mse_none_transforms.yaml  cnn_all_obs_mse_none_transforms_bigger.yaml  cnn_all_obs_mse_none_transforms_random_bigger.yaml  cnn_all_obs_mse_softplus_transforms_bigger.yaml  cnn_all_obs_mse_softplus_transforms_random_bigger.yaml  cnn_all_obs_msle_softplus_transforms_bigger.yaml  resnet_density_msle.yaml  se_cnn_all_obs_mse.yaml  se_cnn_all_obs_mse_erasing_smaller.yaml  se_cnn_density_msle.yaml  (+10 more)
dmb/configs/experiment/bose_hubbard_2d_pyalps/: test_density_msle.yaml
dmb/configs/hparams_search/: coordconv_lucas_optuna.yaml  decoder_speclib2d_optuna.yaml
dmb/configs/hydra/: default.yaml
dmb/configs/trainer/: default.yaml
dmb/data/: dataset.py  mixins.py  split.py  test.py  utils.py
dmb/data/2d/: config.py
dmb/data/bose_hubbard_2d/: create2.py  datamodule.py  dataset.py  helpers.py  network_input.py  phase_diagram.py  plots.py  potential.py  simulation.py  transforms.py  utils.py
dmb/data/bose_hubbard_2d/.ipynb_checkpoints/: dataset-checkpoint.py
dmb/data/bose_hubbard_2d/bose_hubbard_2d_pyalps/: datamodule.py  dataset.py
dmb/data/bose_hubbard_2d/cpp_worm/: datamodule.py  dataset.py
dmb/data/bose_hubbard_2d/dummy/: datamodule.py  dataset.py
dmb/data/bose_hubbard_2d/plotting/: phase_diagram.py  sandbox.py
dmb/data/bose_hubbard_2d/scripts/: continue.py  plot_simulations.py
dmb/data/bose_hubbard_2d/simulated/: datamodule.py  dataset.py  fake_phase_diagram_objects.py
dmb/data/bose_hubbard_2d/worm/: datamodule.py  dataset.py  sim.py
dmb/data/bose_hubbard_2d/worm_qmc/: datamodule.py  dataset.py
dmb/data/bose_hubbard_2d_pyalps/: datamodule.py
dmb/data/dim_2/: create.py  create2.py  helpers.py
dmb/data/dispatching/: __init__.py  dispatchers.py  helpers.py  runner.py
dmb/experiments/: callbacks.py  create_split.py  task_utils.py  train.py
dmb/experiments/configs/: split.yaml  train.yaml
dmb/experiments/configs/callbacks/: default.yaml  model_checkpoint_regular.yaml  stochastic_weight_averaging.yaml
dmb/experiments/configs/datamodule/: bose_hubbard_2d.yaml
dmb/experiments/configs/hparams_search/: coordconv_speclib2d_optuna.yaml  speclib2d_coordconv_optuna.yaml  transformer_lucas_optuna.yaml  transformer_speclib2d_optuna.yaml
dmb/experiments/configs/logger/: wandb.yaml
dmb/experiments/configs/model/: dmb_lit_model.yaml
dmb/experiments/configs/split/: from_dataset.yaml  from_file.yaml
dmb/experiments/configs/trainer/: default.yaml
dmb/model/: constraints.py  dmb_model.py  lit_dmb_model.py  lit_model.py  loss.py  metrics.py  mixins.py  utils.py
dmb/model/.ipynb_checkpoints/: lit_model-checkpoint.py
dmb/model/models/: deeplabv3_alike.py  model.py  regnet_2d.py  resnet_2d.py  simple_resnet1d.py  simple_resnet2d.py
dmb/scripts/: callbacks.py  create_split.py
dmb/scripts/configs/: create_split.yaml
dmb/scripts/configs/callbacks/: default.yaml
dmb/scripts/configs/datamodule/: bose_hubbard_2d.yaml
dmb/scripts/configs/lit_model/: lit_dmb_model.yaml
dmb/scripts/configs/paths/: default.yaml
dmb/scripts/configs/split/: from_dataset.yaml  from_file.yaml
dmb/scripts/configs/trainer/: default.yaml
dmb/utils/: __init__.py  io.py  paths.py  syjson.py
scripts/: plot_model.py
src/auto-correlation/auto_correlation/: __init__.py  ac.py
src/auto_correlation/: __init__.py  ac.py
src/dmb/: io.py  logging.py  paths.py
src/dmb/data/: collate.py  dataset.py  sampler.py  split.py  transforms.py  utils.py
src/dmb/data/bose_hubbard_2d/: nn_input.py  potential.py  transforms.py
src/dmb/data/dispatching/: __init__.py  dispatchers.py  helpers.py
src/dmb/model/: constraints.py  dmb_model.py  inversion.py  lit_dmb_model.py  loss.py  metrics.py  visualization.py
src/dmb/model/models/: deeplabv3_alike.py  model.py  regnet_2d.py  resnet_2d.py  simple_resnet1d.py  simple_resnet2d.py
src/dmb/model/modules/: __init__.py  es_resnet2d.py  resnet2d.py  se_resnet2d.py  se_resnet2d_v3.py  se_resnet2d_v4.py  se_resnet2d_v4_2.py  se_resnet2d_v4_3.py  se_resnet2d_v5.py
src/dmb/scripts/: callbacks.py  create_split.py  train.py
src/dmb/scripts/configs/: create_split.yaml  train.yaml
src/dmb/scripts/evaluate/: analyze_qmc_runtimes.py  generate_plots.py
src/dmb/scripts/invert/: callbacks.py  invert.py
src/dmb/scripts/train/: callbacks.py  create_split.py  train.py
src/job_scripts/: Taskfile.yaml
src/job_scripts/templates/: gpu_job_template.sh.jinja2  qmc_jobs_starter_template.sh.jinja2  standard_cpu_job_template.sh.jinja2
src/scripts/: plot_model.py
src/tests/: test_split.py
src/tests/data/: fake_id_dataset.py  test_sampler.py  test_split.py  test_transforms.py
src/tests/data/bose_hubbard_2d/: test_transforms.py
src/tests/model/: test_es_resnet2d.py  test_lit_dmb_model.py  test_loss_metrics.py
tests/: test_split.py
tests/bose_hubbard_2d/worm/simulation/: conftest.py  test_ee.py  test_output.py  test_runner.py  test_sim.py
tests/observables/: fake_worm_output.py  test_observables.py
tests/test_bose_hubbard_2d/: test_simulated.py
tests/test_bose_hubbard_2d/cpp_worm/: test_runner.py  test_simulation.py  test_uniform_result.py
(+246 files in other folders)
